--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <script>
+    if (global === undefined) {
+      var global = window;
+    }
+  </script>
   <title>RPGPlaceAngular</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
